--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,16 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
-description:
-author: John Doe
-language:
+title: 'Chino'
+subtitle: '寫寫筆記、享受人生'
+description: 'Empty.'
+author: 'ZHONG-SHENG WU'
+language: 'Chinese, English'
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://samsam2310.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
