--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,23 @@
 ## Docs: http://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 
+
+# ----------------------------------------
+
+# Change ofen
+
+# code
+# new_post_name: :title.md # File name of new posts
+# post_asset_folder: false
+
+# diary
+new_post_name: :year-:month:day:title.md # File name of new posts
+post_asset_folder: true
+
+
+# ----------------------------------------
+
+
 # Site
 title: 'Chino'
 subtitle: '寫寫筆記、享受人生!'
@@ -28,13 +45,14 @@ i18n_dir: :lang
 skip_render:
 
 # Writing
-new_post_name: :title.md # File name of new posts
+#new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
+auto_spacing: true
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+#post_asset_folder: false
 relative_link: false
 future: true
 highlight:
