--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -22,7 +22,7 @@ widgets:
 
 # Miscellaneous
 google_analytics:
-favicon: /favicon.png
+favicon: /favicon.ico
 disqus_shortname:
 twitter:
 google_plus:
