add Disqus, google analytic

--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -21,9 +21,8 @@ widgets:
 
 
 # Miscellaneous
-google_analytics:
+google_analytics: UA-72943167-1
 favicon: /favicon.ico
-disqus_shortname:
 twitter:
 google_plus:
 fb_admins:
