add rss and sitemap plugin

--- a/_config.yml
+++ b/_config.yml
@@ -104,3 +104,15 @@ deploy:
 
 # Disqus
 disqus_shortname: chinos
+
+
+# RSS
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+
+# SiteMap
+sitemap:
+  path: sitemap.xml
