--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ post_asset_folder: true
 title: "Chino's"
 subtitle: '指考戰士來喔！'
 description: "Chino's 是我架設的個人Blog。紀錄我的一些筆記、日記、演算法解題報告。"
-author: 'ZHONG-SHENG WU'
+author: 'CHUNG-SHENG WU'
 language: 'Chinese, English'
 timezone:
 
