update readme, add a new diary

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ post_asset_folder: true
 
 # Site
 title: "Chino's"
-subtitle: '指考戰士來喔！準備TOI！！'
+subtitle: '編寫程式不是種能力，而是一種生活方式。'
 description: "Chino's 是我架設的個人Blog。紀錄我的一些筆記、日記、演算法解題報告。"
 author: 'CHUNG-SHENG WU'
 language: 'Chinese, English'
